@@ -6108,6 +6108,23 @@ just the cell and symmetry)
     <spacing>0</spacing>
 
     <widget>
+      <class>GtkLabel</class>
+      <name>dynarama_label</name>
+      <label>Ramachandran Plot</label>
+      <justify>GTK_JUSTIFY_CENTER</justify>
+      <wrap>False</wrap>
+      <xalign>0.5</xalign>
+      <yalign>0.5</yalign>
+      <xpad>0</xpad>
+      <ypad>0</ypad>
+      <child>
+	<padding>3</padding>
+	<expand>False</expand>
+	<fill>False</fill>
+      </child>
+    </widget>
+
+    <widget>
       <class>GtkScrolledWindow</class>
       <name>dynarama_scrolledwindow</name>
       <hscrollbar_policy>GTK_POLICY_ALWAYS</hscrollbar_policy>
@@ -6814,6 +6831,57 @@ just the cell and symmetry)
 
       <widget>
 	<class>GtkFrame</class>
+	<name>frame200</name>
+	<border_width>2</border_width>
+	<label>Where to Search?</label>
+	<label_xalign>0</label_xalign>
+	<shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
+	<child>
+	  <padding>0</padding>
+	  <expand>True</expand>
+	  <fill>True</fill>
+	</child>
+
+	<widget>
+	  <class>GtkVBox</class>
+	  <name>vbox206</name>
+	  <homogeneous>False</homogeneous>
+	  <spacing>0</spacing>
+
+	  <widget>
+	    <class>GtkRadioButton</class>
+	    <name>find_ligands_search_all_radiobutton</name>
+	    <can_focus>True</can_focus>
+	    <label>Everywhere</label>
+	    <active>True</active>
+	    <draw_indicator>True</draw_indicator>
+	    <group>find_ligands_search</group>
+	    <child>
+	      <padding>0</padding>
+	      <expand>False</expand>
+	      <fill>False</fill>
+	    </child>
+	  </widget>
+
+	  <widget>
+	    <class>GtkRadioButton</class>
+	    <name>find_ligands_search_here_radiobutton</name>
+	    <can_focus>True</can_focus>
+	    <label>Right Here</label>
+	    <active>False</active>
+	    <draw_indicator>True</draw_indicator>
+	    <group>find_ligands_search</group>
+	    <child>
+	      <padding>0</padding>
+	      <expand>False</expand>
+	      <fill>False</fill>
+	    </child>
+	  </widget>
+	</widget>
+      </widget>
+
+      <widget>
+	<class>GtkFrame</class>
 	<name>frame85</name>
 	<border_width>5</border_width>
 	<label>Sigma Level</label>
@@ -6975,6 +7043,10 @@ just the cell and symmetry)
 	  </widget>
 	</widget>
       </widget>
+    </widget>
+
+    <widget>
+      <class>Placeholder</class>
     </widget>
   </widget>
 </widget>
