@@ -224,7 +224,8 @@ class rama_plot {
 
    double rama_threshold_allowed;  // 0.05 
    double rama_threshold_preferred; // 0.002
-   void init_internal(float level_prefered, float level_allowed,
+   void init_internal(const std::string &mol_name,
+		      float level_prefered, float level_allowed,
 		      float block_size,
 		      short int hide_butttons = 0,
 		      short int is_kleywegt_plot = 0); // called by init(int imol)
@@ -267,7 +268,7 @@ public:
    // gtk_object_destroy(big_box_item) if it is non-zero.
    void init(const std::string &type);
    // typically level_prefered = 0.02, level_allowed is 0.002, block_size is 10.0;
-   void init(int imol_no, float level_prefered, float level_allowed, float block_size_for_background, short int is_kleywegt_plot_flag);
+   void init(int imol_no, const std::string &mol_name, float level_prefered, float level_allowed, float block_size_for_background, short int is_kleywegt_plot_flag);
 
    void allow_seqnum_offset();
    void set_n_diffs(int nd);
